    to groupselections (PR #2610, Issue #2429)
  * PersistenceLength.plot() now create new axes if current axes not provided (Issue #2590)
  * Added a correlations module to provide functionality for analysis modules to
    calculate the discrete autocorrelation function in a standardised way. Added
    the capability to allow intermittent behaviour (PR #2256)

Changes
  * Deprecated :class:`ProgressMeter` and replaced it with :class:`ProgressBar` using
    the tqdm package (Issue #928, PR #2617). Also fixes issue #2504.
  * Removed `details` from `ClusteringMethod`s (Issue #2575, PR #2620)
  * Removed deprecated :meth:`PersistenceLength.perform_fit` (Issue #2596)
  * Changed :meth:`PSAnalysis.generate_paths` keywords `store` and `filename`
    defaults to `False` and `None` (Issue #2593)
  * Removed `format` keyword from :meth:`MemoryReader.timeseries` (Issue #1453,
    #2443)
  * Deprecated :class:`LAMMPSDataConverter` has now been removed (Issue #2564)
  * Removed AtomGroup stubs (PR #1070, Issue #2443).
  * encore.hes() doesn't accept the details keyword anymore, it always returns
    the relevant details instead, consistently with ces() and dres(), in the
    form of a dictionary (Issue #2465)
  * Removed instant selectors on Universe and Group objects (e.g. AtomGroup.C,
    Segment.r1, Universe.s4AKE).  Use select_atoms instead (Issue #1377)
  * Calling Universe() now raises a TypeError advising you to use Universe.empty.
    Universe.empty() now no longer has n_atoms=0 as default. (Issue #2527)
  * deprecated `start`, `stop`, and `step` keywords have been removed from `__init__`
    in :class:`AnalysisBase`. These should now be called in :meth:`AnalysisBase.run`
    (Issue #1463)
  * Standardize `select` keyword by removing `selection`, `atomselection`
    and `ref_select` (Issue #2461, Issue #2530)
  * Removes support for setting `start`/`stop`/`step` trajecotry slicing
    keywords on :class:`HOLEtraj` construction. Also removes undocumented